third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/round-trip/test_enum_variant_test.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/test_enum_variant_test.move`

//# publish
module 0x42::m2 {
}


//# publish
module 0x42::m {
    friend 0x42::m2;
    enum Data has drop {
        V1 {
            x: u64,
        }
        V2 {
            x: u64,
            y: bool,
        }
        V3,
    }
    enum Data2 has drop {
        V1 {
            x: u64,
        }
        V2 {
            y: u64,
            x: u64,
        }
        V3,
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V1(p0: &Data): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V2(p0: &Data): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V3(p0: &Data): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data_V1(p0: u64): Data {
        Data::V1{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data_V2(p0: u64, p1: bool): Data {
        Data::V2{x: p0, y: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data_V3(): Data {
        Data::V3{}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V1(p0: Data): u64 {
        let Data::V1{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V2(p0: Data): (u64, bool) {
        let Data::V2{x: _v0, y: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V3(p0: Data) {
        let Data::V3{} = p0;
    }
    #[borrow]
    friend fun borrow_0x42_m_Data_x_0(p0: &Data): &u64 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data_y_1(p0: &Data): &bool {
        &p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data_x_0(p0: &mut Data): &mut u64 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data_y_1(p0: &mut Data): &mut bool {
        &mut p0.y
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V1(p0: &Data2): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V2(p0: &Data2): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V3(p0: &Data2): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V1(p0: u64): Data2 {
        Data2::V1{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V2(p0: u64, p1: u64): Data2 {
        Data2::V2{y: p0, x: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V3(): Data2 {
        Data2::V3{}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V1(p0: Data2): u64 {
        let Data2::V1{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V2(p0: Data2): (u64, u64) {
        let Data2::V2{y: _v0, x: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V3(p0: Data2) {
        let Data2::V3{} = p0;
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_x_0(p0: &Data2): &u64 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_x_1(p0: &Data2): &u64 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_y_0(p0: &Data2): &u64 {
        &p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_x_0(p0: &mut Data2): &mut u64 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_x_1(p0: &mut Data2): &mut u64 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_y_0(p0: &mut Data2): &mut u64 {
        &mut p0.y
    }
}


//# publish
module 0x42::m2 {
    use 0x42::m;
    public fun test_match_mut_borrow() {
        let _v0 = m::pack_0x42_m_Data2_V2(43, 44);
        let _v1 = &mut _v0;
        let _v2 = m::test_variant_0x42_m_Data2_V2(freeze(_v1));
        loop {
            if (_v2) {
                let _v3 = m::borrow_mut_0x42_m_Data2_y_0(_v1);
                let _v4 = m::borrow_mut_0x42_m_Data2_x_1(_v1);
                if (*_v3 == 43) {
                    let _v5;
                    *_v4 = 45;
                    let _v6 = &_v0;
                    if (m::test_variant_0x42_m_Data2_V2(_v6)) _v5 = m::borrow_0x42_m_Data2_x_1(_v6) else _v5 = m::borrow_0x42_m_Data2_x_0(_v6);
                    if (*_v5 == 45) break;
                    abort 1
                }
            };
            return ()
        };
    }
    fun test_v1(): bool {
        let _v0 = m::pack_0x42_m_Data_V1(43);
        if (m::test_variant_0x42_m_Data_V1(&_v0)) {
            let _v1 = &_v0;
            let _v2 = m::test_variant_0x42_m_Data_V1(_v1);
            let _v3 = _v2;
            loop {
                if (!_v3) {
                    _v2 = m::test_variant_0x42_m_Data_V3(_v1);
                    if (_v2) break
                };
                return _v2
            };
            return _v2
        };
        false
    }
    public fun test_v1_mut_borrow() {
        let _v0 = m::pack_0x42_m_Data_V1(43);
        let _v1 = m::borrow_mut_0x42_m_Data_x_0(&mut _v0);
        *_v1 = 44;
        assert!(*m::borrow_0x42_m_Data_x_0(&_v0) == 44, 1);
    }
    fun test_v1v3(): bool {
        let _v0 = m::pack_0x42_m_Data_V1(43);
        let _v1 = &_v0;
        let _v2 = m::test_variant_0x42_m_Data_V1(_v1);
        if (!_v2) _v2 = m::test_variant_0x42_m_Data_V3(_v1);
        let _v3 = m::pack_0x42_m_Data_V3();
        if (_v2) {
            let _v4 = &_v3;
            let _v5 = m::test_variant_0x42_m_Data_V1(_v4);
            let _v6 = _v5;
            loop {
                if (!_v6) {
                    _v5 = m::test_variant_0x42_m_Data_V3(_v4);
                    if (_v5) break
                };
                return _v5
            };
            return _v5
        };
        false
    }
    fun test_v1v3_ref(): bool {
        let _v0 = m::pack_0x42_m_Data_V1(43);
        let _v1 = &_v0;
        let _v2 = m::test_variant_0x42_m_Data_V1(_v1);
        if (!_v2) _v2 = m::test_variant_0x42_m_Data_V3(_v1);
        let _v3 = m::pack_0x42_m_Data_V3();
        if (_v2) {
            let _v4 = &mut _v3;
            let _v5 = m::test_variant_0x42_m_Data_V1(freeze(_v4));
            let _v6 = _v5;
            loop {
                if (!_v6) {
                    _v5 = m::test_variant_0x42_m_Data_V3(freeze(_v4));
                    if (_v5) break
                };
                return _v5
            };
            return _v5
        };
        false
    }
    public fun test_v2_mut_borrow_2() {
        let _v0;
        let _v1;
        let _v2 = m::pack_0x42_m_Data2_V2(43, 44);
        let _v3 = &mut _v2;
        if (m::test_variant_0x42_m_Data2_V2(freeze(_v3))) _v0 = m::borrow_mut_0x42_m_Data2_x_1(_v3) else _v0 = m::borrow_mut_0x42_m_Data2_x_0(_v3);
        *_v0 = 45;
        let _v4 = &_v2;
        if (m::test_variant_0x42_m_Data2_V2(_v4)) _v1 = m::borrow_0x42_m_Data2_x_1(_v4) else _v1 = m::borrow_0x42_m_Data2_x_0(_v4);
        assert!(*_v1 == 45, 1);
    }
}


//# run 0x42::m2::test_v1

//# run 0x42::m2::test_v1v3

//# run 0x42::m2::test_v1v3_ref

//# run 0x42::m2::test_v1_mut_borrow

//# run 0x42::m2::test_v2_mut_borrow_2

//# run 0x42::m2::test_match_mut_borrow